# ld_crewai_factory

./: README.md  pyproject.toml
agent_team/: README.md  pyproject.toml
agent_team/src/agent_team/: crew.py  main.py
agent_team/src/agent_team/config/: agents.yaml  tasks.yaml
src/ld_crewai_factory/: crew.py  main.py
src/ld_crewai_factory/config/: agents.yaml  tasks.yaml
