[project]
name = "ld_crewai_factory"
version = "0.1.0"
description = "ld_crewai_factory using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
ld_crewai_factory = "ld_crewai_factory.main:run"
run_crew = "ld_crewai_factory.main:run"
train = "ld_crewai_factory.main:train"
replay = "ld_crewai_factory.main:replay"
test = "ld_crewai_factory.main:test"
run_with_trigger = "ld_crewai_factory.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
